# BT

./: .cursorignore  .gitignore  README.md  STRATEGY_DEVELOPMENT_LOG.md  install_optimized.sh  optimization_analysis.md  performance_optimizer.py  pyproject.toml  pyproject_optimized.toml  strategy_final_push.py  strategy_iteration.py  strategy_iteration_advanced.py  weekly_iteration.py
.claude/: .gitignore  settings.local.json
.cursor/: mcp.json
ai backtests/: Cross_Asset_2Week_Momentum.py  Gradient Boosting, Weekly Model on cad_ig_er_index.ipynb  Multi-asset momentum.ipynb  Multi-asset momentum.py  genetic algo weekly.ipynb  genetic algo weekly.py  test.ipynb
ai_instructions/: AI_Backtesting_Custom_Instructions.md  financial data science.md  god more intent.md  jupyter_agent_instructions.md  ml.md  python_script_agent_instructions.md  xbbg_api.md
backtesting_framework/: .gitignore  README.md  main.py  pyproject.toml
backtesting_framework/configs/: base_config.yaml  custom_config.yaml  lightgbm_config.yaml
backtesting_framework/core/: __init__.py  data_loader.py  feature_engineering.py  metrics.py  portfolio.py  reporting.py
backtesting_framework/outputs/custom_reports/: genetic_algorithm_report.html
backtesting_framework/outputs/custom_reports/artifacts/: genetic_algorithm_returns.csv  genetic_algorithm_signals.csv
backtesting_framework/outputs/reports/: cross_asset_momentum_report.html  genetic_algorithm_report.html  multi_asset_momentum_report.html  vol_adaptive_momentum_report.html
backtesting_framework/outputs/reports/artifacts/: cross_asset_momentum_equity.csv  cross_asset_momentum_metrics.json  cross_asset_momentum_returns.csv  cross_asset_momentum_signals.csv  genetic_algorithm_equity.csv  genetic_algorithm_metrics.json  genetic_algorithm_returns.csv  genetic_algorithm_signals.csv  lightgbm_strategy_equity.csv  lightgbm_strategy_metrics.json  lightgbm_strategy_returns.csv  multi_asset_momentum_equity.csv  multi_asset_momentum_metrics.json  multi_asset_momentum_returns.csv  multi_asset_momentum_signals.csv  vol_adaptive_momentum_equity.csv  vol_adaptive_momentum_metrics.json  vol_adaptive_momentum_returns.csv  vol_adaptive_momentum_signals.csv
backtesting_framework/outputs/results/: Trade_Blotter.txt  comprehensive_strategy_comparison.txt
backtesting_framework/strategies/: __init__.py  cross_asset_momentum.py  genetic_algorithm.py  lightgbm_strategy.py  multi_asset_momentum.py  strategy_factory.py
cad ig er index weekly backtests/: Cross_Asset_2Week_Momentum.py  Multi-asset momentum.py  genetic algo weekly.py
cad ig er weekly backtests deep agent/: FEATURE_IMPORTANCE_FINAL_SUMMARY.md  best_trading_model.pkl  comprehensive_feature_analysis.py  comprehensive_feature_importance_report.md  create_final_summary.py  create_visualizations.py  feature_importance_analysis.py  feature_importance_detailed_analysis.py  feature_importance_report.py  strategy_report.md  (+10 more)
(+682 files in other folders)
